[gd_scene load_steps=3 format=3 uid="uid://d13l08ft4wmkf"]

[ext_resource type="Script" uid="uid://c23xmgis2nc0e" path="res://UI/Pause.gd" id="1_h74dl"]

[sub_resource type="LabelSettings" id="LabelSettings_vyqui"]
font_size = 64

[node name="Pause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h74dl")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -382.0
offset_top = 59.0
offset_right = 382.0
offset_bottom = -42.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.729412, 0.729412, 0.729412, 0.462745)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -253.0
offset_top = 250.0
offset_right = 246.0
offset_bottom = -195.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(1, 20)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Restart"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Settings"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Menu"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -91.0
offset_top = 131.0
offset_right = 94.0
offset_bottom = -501.0
text = "Pause"
label_settings = SubResource("LabelSettings_vyqui")
